fixed safari left arrow flickering & display issue

--- a/src/App.css
+++ b/src/App.css
@@ -2191,7 +2191,7 @@ code, .code {
   }
   #right-arrow {
     top: 4px;
-    right: 1px
+    right: 8px;
   }
 }
 
@@ -2214,21 +2214,22 @@ code, .code {
     width: 10px
   }
   .toolbar{
-    width: 85%;
+    width: 90%;
     top: 10px;
   }
   #left-arrow {
-    top: 10px;
-    left: 10%
+    top: 8px;
+    left: 8%
   }
   #right-arrow {
-    top: 10px;
-    right: 1px
+    top: 8px;
+    right: 8px;
   }
 }
 @media only screen and (max-width: 468px){
   .toolbar{
     top: 1.3%;
+    width: 85%
   }
   #left-arrow, #right-arrow {
     width: 10px;
@@ -2239,5 +2240,6 @@ code, .code {
   }
   #right-arrow {
     top: .8%;
+    right: 8px;
   }
 }
